<resources>
    <string name="app_name">UniSociety</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_dateSearch">Date</string>
    <string name="title_accountManagement">Account</string>

    <string name="Text_Submit">Submit</string>
    <string name="Text_Manage_History">Manage Posts</string>
    <string name="Text_Change_Password">Change Password</string>
    <string name="Text_Edit_Profile">Edit Profile</string>
    <string name="Text_Title">Title</string>
    <string name="Text_Description">Description</string>
    <string name="Text_Date">Date</string>
    <string name="Text_Time">Time</string>
    <string name="Text_Location">Location</string>
    <string name="Text_History">History</string>
    <string name="Text_Sign_Up">Sign Up</string>
    <string name="Text_User_Name">User Name</string>
    <string name="Text_Password">Password</string>
    <string name="Text_Confirm_Password">Confirm Password</string>
    <string name="Text_Security_Question">Security Question</string>
    <string name="Text_Security_Code">Security Code</string>
    <string name="Text_Forget_Password">Forget Password</string>
    <string name="Text_Login">Login</string>
    <string name="Text_Notification">Notification</string>
    <string name="Text_Student">Student</string>
    <string name="Text_Event_Title">Event Title</string>
    <string name="Text_Join">Join</string>
    <string name="Text_Heading">Heading</string>
    <string name="Text_Category">Category</string>
    <string name="Text_New_Password">New Password</string>
    <string name="Text_Notify_Me">Notify Me</string>
    <string name="Text_Choose_From_Photo">Choose From Photo</string>
    <string name="Text_Take_A_Photo">Take A Photo</string>
    <string name="Text_Society_Name">Society Name</string>
    <string name="Text_Choose_Date">Choose Date</string>
    <string name="Text_Starting_Time">Starting Time</string>
    <string name="Text_Ending_Time">Ending Time</string>
    <string name="Text_Enter_All_Fields">Please enter all fields.</string>
    <string name="Text_Attend">Attend</string>
    <string name="Text_Attended">Attended</string>


    <string-array name="societies">
        <item>BITSA</item>
        <item>WIT</item>
    </string-array>

    <string-array name="soc_cate">
        <item>Information System</item>
        <item>Accounting</item>
        <item>Engineering</item>
    </string-array>

    <string-array name="categories">
        <item>Workshop</item>
        <item>Social</item>
        <item>Party</item>
        <item>Food</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_event_list">Events</string>
    <string name="title_event_detail">Event Detail</string>
    <string name="Text_Me">Me</string>
    <string name="Text_logout">Logout</string>

</resources>
