<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:orientation="horizontal"
        android:layout_weight="0.01">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="49dp"
            android:layout_height="55dp"
            app:srcCompat="@mipmap/ic_goback" />

        <ImageButton
            android:id="@+id/btn_change_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            app:srcCompat="@mipmap/ic_launcher_round" />

    </LinearLayout>

    <Spinner
        android:id="@+id/society_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.12" />

    <EditText
        android:id="@+id/security_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:ems="10"
        android:hint="@string/Text_Security_Code"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/uer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:ems="10"
        android:hint="@string/Text_User_Name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:ems="10"
        android:hint="@string/Text_Password"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Confirm_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:ems="10"
        android:hint="@string/Text_Confirm_Password"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Sequrity_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:ems="10"
        android:hint="What is your favorite color?"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.14"
        android:text="@string/Text_Edit_Profile" />
</LinearLayout>

