<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:orientation="horizontal"
        android:layout_weight="0.01">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.04"
            app:srcCompat="@android:drawable/ic_media_previous" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="154dp"
            android:layout_height="match_parent"
            android:layout_weight="0.06"
            android:text="@string/Text_Change_Password"
            android:layout_gravity="end"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/Password"
            android:layout_width="82dp"
            android:layout_height="36dp"
            android:text="@string/Text_New_Password"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="327dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/Text_New_Password" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/Confirm_Password"
            android:layout_width="82dp"
            android:layout_height="36dp"
            android:text="@string/Text_Confirm_Password"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="327dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/Text_Confirm_Password" />
    </LinearLayout>

    <EditText
        android:id="@+id/Sequrity_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:ems="10"
        android:hint="@string/Text_Security_Question"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button2"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:text="@string/Text_Submit"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:background="@drawable/blue_onclickwhite" />

</LinearLayout>