<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.63"
        android:text="@string/Text_Student"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:layout_weight="0.63"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.36"
            android:text="@string/Text_Change_Password" />

        <Button
            android:id="@+id/btn_Notification"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.33"
            android:text="@string/Text_Notification" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="166dp"
        android:orientation="horizontal">

    </LinearLayout>

</LinearLayout>