<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:orientation="horizontal"
        android:layout_weight="0.01">

        <ImageButton
            android:id="@+id/imbtn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.04"
            app:srcCompat="@android:drawable/ic_media_previous" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="154dp"
            android:layout_height="match_parent"
            android:layout_weight="0.06"
            android:text="@string/Text_Event_Title"
            android:layout_gravity="end"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="333dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:srcCompat="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/society_icon"
            android:layout_width="144dp"
            android:layout_height="match_parent"
            android:layout_weight="0.05"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/btn_join"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:text="TextView" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/Text_Join" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight="0.13">

        <TextView
            android:id="@+id/text_Date"
            android:layout_width="82dp"
            android:layout_height="36dp"
            android:text="@string/Text_Date"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <EditText
            android:id="@+id/Date"
            android:layout_width="327dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Text_Date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/text_time"
            android:layout_width="82dp"
            android:layout_height="36dp"
            android:text="@string/Text_Time"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <EditText
            android:id="@+id/time"
            android:layout_width="327dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Text_Time" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/text_Location"
            android:layout_width="82dp"
            android:layout_height="36dp"
            android:text="@string/Text_Location"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <EditText
            android:id="@+id/Location"
            android:layout_width="327dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Text_Location" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/Text_Description"
            android:layout_width="82dp"
            android:layout_height="36dp"
            android:text="@string/Text_Description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <EditText
            android:id="@+id/Description"
            android:layout_width="327dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Text_Description" />
    </LinearLayout>
</LinearLayout>