<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/accountManagement_Society"
    android:layout_margin="@dimen/activity_horizontal_margin"
    tools:context="com.example.celine.unisociety.AccountManagement_Society">

    <ImageButton
        android:id="@+id/IB_SocietyProfilePic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_edit_profile"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:cropToPadding="true"
        android:elevation="9dp"
        android:padding="@dimen/activity_horizontal_margin"
        android:scaleType="fitCenter"
        android:src="@drawable/bitsa_logo" />

    <Button
        android:id="@+id/btn_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_change_password"
        android:layout_centerHorizontal="false"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:layout_margin="@dimen/btn_padding"
        android:padding="@dimen/btn_padding"
        android:text="@string/Text_Edit_Profile" />

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/btn_padding"
        android:layout_weight="0.38"
        android:padding="@dimen/btn_padding"
        android:text="@string/Text_Change_Password" />

    <Button
        android:id="@+id/btn_manage_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_change_password"
        android:layout_margin="@dimen/btn_padding"
        android:layout_weight="0.30"
        android:padding="@dimen/btn_padding"
        android:text="@string/Text_Manage_History" />

</RelativeLayout>
