<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:orientation="horizontal"
        android:layout_weight="0.01">

        <ImageButton
            android:id="@+id/imbtn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.04"
            app:srcCompat="@android:drawable/ic_media_previous" />

        <ImageView
            android:id="@+id/im_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.04"
            app:srcCompat="@mipmap/ic_launcher_round" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07"
        android:text="@string/Text_Heading" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/TV_society_name"
            android:layout_width="82dp"
            android:layout_height="36dp"
            android:text="@string/Text_Society_Name"
            android:textColor="@color/textColorDarkBlue"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <EditText
            android:id="@+id/ET_society_name"
            android:layout_width="327dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/TV_Description"
            android:layout_width="82dp"
            android:layout_height="36dp"
            android:text="@string/Text_Description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <EditText
            android:id="@+id/ET_description"
            android:layout_width="327dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

</LinearLayout>