<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:weightSum="1">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="108dp">

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="138dp"
            android:layout_height="98dp"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/ic_launcher_round" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.38"
            android:text="@string/Text_Change_Password" />

        <Button
            android:id="@+id/btn_manage_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:text="@string/Text_Manage_History" />

        <Button
            android:id="@+id/btn_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_weight="0.07"
            android:text="@string/Text_Edit_Profile" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imbtn_home"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.29"
            app:srcCompat="@drawable/ic_home_black_24dp" />

        <ImageButton
            android:id="@+id/imbtn_calendar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.14"
            app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

        <ImageButton
            android:id="@+id/imbtn_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.14"
            app:srcCompat="@android:drawable/ic_menu_agenda" />

        <ImageButton
            android:id="@+id/imbtn_personal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.67"
            app:srcCompat="@mipmap/ic_launcher" />
    </LinearLayout>

</LinearLayout>